--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: ng build
+        run: npm run build
       - name: Deploy to GitHub Pages
         run: |
-          npx angular-cli-ghpages --dir=dist/your-angular-app
+          npx angular-cli-ghpages --dir=dist/kwweld
 
 
