include gh token

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Deploy to GitHub Pages
         run: |
           npx angular-cli-ghpages --dir=dist/kwweld
-
-
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
