--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,6 +42,6 @@ jobs:
         run: npm run build
       - name: Deploy to GitHub Pages
         run: |
-          npx angular-cli-ghpages --dir=dist/kwweld
+          npx angular-cli-ghpages --dir=dist/kwweld --no-silent
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
