--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,6 +29,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - run: git config --global user.email "karlw200@gmail.com"
+      - run: git config --global user.name "KarlWinkler"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
