--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -44,6 +44,7 @@ jobs:
         run: npm run build
       - name: Deploy to GitHub Pages
         run: |
-          npx angular-cli-ghpages --dir=dist/kwweld --no-silent
+          npx angular-cli-ghpages --dir=dist/kwweld
         env:
+          CI: true
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
