--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,41 +10,24 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
-      - run: git config --global user.email "karlw200@gmail.com"
-      - run: git config --global user.name "KarlWinkler"
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run build
-      - name: Deploy to GitHub Pages
-        run: |
-          npx angular-cli-ghpages --dir=dist/kwweld
-        env:
-          CI: true
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+    - name: Adding Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Build Angular App
+      run: npm run build
+    - name: Deploy to gh pages
+      run: |
+        npx angular-cli-ghpages --dir=dist/your-angular-app
+      env:
+        CI: true
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
