--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm run build
     - name: Deploy to gh pages
       run: |
-        npx angular-cli-ghpages --dir=dist/your-angular-app
+        npx angular-cli-ghpages --dir=dist/kwweld
       env:
         CI: true
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
