try another version of github workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,33 +1,35 @@
 # https://vite.dev/guide/static-deploy#github-pagess
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Build & Deploy to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ['main']
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  build:
+  # Build job
+  deploy:
     runs-on: ubuntu-latest
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    - name: Adding Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-    - name: Install Dependencies
-      run: npm install
 
-    - name: Build Angular App
-      run: npm run build
-    - name: Deploy to gh pages
-      run: |
-        npx angular-cli-ghpages --dir=dist/kwweld
-      env:
-        CI: true
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: latest
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy to Github pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          npm run ng -- deploy --repo="https://github.com/karlwinkler/kwweld.git" --base-href=/kwweld/ --name=karlwinkler --email=karlw200@gmail.com
